Refactor CritterFunctionalTest to use assertThat for improved readability and consistency